--- a/src/MLBlazorRCL/Login.razor
+++ b/src/MLBlazorRCL/Login.razor
@@ -14,7 +14,7 @@
  <div class="panel-body">
   <div>
    <a href="/about">MiracleList</a> ist eine Beispielanwendung für eine Single-Page-Webapplication (SPA) zur Aufgabenverwaltung. Diese Variante des Frontends läuft mit ASP.NET Core Blazor WebAssembly (@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription).
-   <span class="glyphicon glyphicon-arrow-right"></span><a href="/About/WeitereInformationenMiracleList">Andere Varianten</a>
+   <span class="glyphicon glyphicon-arrow-right"></span><a href="/About/AboutMiracleList">Andere Varianten</a>
   </div>
   <div>Autor: Dr. Holger Schwichtenberg, <a href="http://www.IT-Visions.de">www.IT-Visions.de</a>, 2018-@DateTime.Now.Year</div>
   <br />
