Layout verbessert und Sprachkorrekturen sowie Linkkorrekturen

--- a/src/MLBlazorRCL/AboutMiracleList.razor
+++ b/src/MLBlazorRCL/AboutMiracleList.razor
@@ -9,7 +9,7 @@
  </div>
 </p>
 
-<h2>Vier Blazor-Implementierung der MiracleList</h2>
+<h2>Vier Blazor-Implementierungen der MiracleList</h2>
 
  Es gibt vier auf ASP.NET Core Blazor basierende Implementierung des MiracleList-Frontends:
 <ul>
