--- a/src/MLBlazorRCL/AboutMiracleList.razor
+++ b/src/MLBlazorRCL/AboutMiracleList.razor
@@ -48,9 +48,9 @@
 <h2>MiracleList-Live-Systeme in der Cloud</h2>
 <ul>
  <li>Backend mit C#/ASP.NET Core: <a href="https://miraclelistbackend.azurewebsites.net" rel="nofollow">https://miraclelistbackend.azurewebsites.net</a></li>
- <li>Web-Frontend C#/Blazor Server: <a href="http://miraclelist-bs.azurewebsites.net" rel="nofollow">http://miraclelist-bs.azurewebsites.net</a></li>
- <li>Web-Frontend C#/Blazor WebAssembly: <a href="http://miraclelist-bw.azurewebsites.net" rel="nofollow">http://miraclelist-bw.azurewebsites.net</a></li>
- <li>Web-Frontend TypeScript/Vue.js: <a href="http://www.miraclelist-vue.net" rel="nofollow">http://www.miraclelist-vue.net</a></li>
+ <li>Web-Frontend C#/Blazor Server: <a href="https://miraclelist-bs.azurewebsites.net" rel="nofollow">https://miraclelist-bs.azurewebsites.net</a></li>
+ <li>Web-Frontend C#/Blazor WebAssembly: <a href="https://miraclelist-bw.azurewebsites.net" rel="nofollow">https://miraclelist-bw.azurewebsites.net</a></li>
+ <li>Web-Frontend TypeScript/Vue.js: <a href="https://miraclelist-vue.azurewebsites.net/" rel="nofollow">https://miraclelist-vue.azurewebsites.net/</a></li>
  <li>Web-Frontend TypeScript/Angular: <a href="http://www.miraclelist.net" rel="nofollow">http://www.miraclelist.net</a></li>
 
  <li>Windows-Client TypeScript/Angular/Electron: <a href="https://Miraclelist.azurewebsites.net/download/MiracleListElectron-win32-x64.rar" rel="nofollow">https://Miraclelist.azurewebsites.net/download/MiracleListElectron-win32-x64.rar</a></li>
