--- a/src/MLBlazorRCL/AboutMiracleList.razor
+++ b/src/MLBlazorRCL/AboutMiracleList.razor
@@ -43,6 +43,7 @@
  <li>Nutzung des Local Storage des Browsers</li>
  <li>Fenster-Synchronisation mit Push-Nachrichten via ASP.NET Core SignalR</li>
  <li>Progressive Web App (nur Blazor WebAssembly)</li>
+ <li>Einsatz kostenfreier Zusatzkomponenten</li>
 </ul>
 
 <h2>MiracleList-Live-Systeme in der Cloud</h2>
