--- a/src/MLBlazorRCL/Login.razor
+++ b/src/MLBlazorRCL/Login.razor
@@ -12,15 +12,12 @@
   <h2 class="Headline">Benutzeranmeldung</h2>
  </div>
  <div class="panel-body">
-  <div>
-   <a href="/about">MiracleList</a> ist eine Beispielanwendung für eine Single-Page-Webapplication (SPA) zur Aufgabenverwaltung. Diese Variante des Frontends läuft mit ASP.NET Core Blazor WebAssembly (@System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription).
-   <span class="glyphicon glyphicon-arrow-right"></span><a href="/About/AboutMiracleList">Andere Varianten</a>
-  </div>
-  <div>Autor: Dr. Holger Schwichtenberg, <a href="http://www.IT-Visions.de">www.IT-Visions.de</a>, 2018-@DateTime.Now.Year</div>
-  <br />
-  <div>
-   Zur Benutzeranmeldung geben Sie die Kombination aus Ihrer E-Mail-Adresse und einem beliebigen Kennwort ein. Wenn es für diese E-Mail-Adresse noch kein Benutzerkonto gibt, wird automatisch ein neues Benutzerkonto angelegt mit einigen Beispielaufgaben. Das Benutzeranmeldeverfahren ist bewusst vereinfacht, um die Hürde zum Einstieg in die Anwendung gering zu halten.
-  </div>
+  <p>
+   <a href="/about">MiracleList</a> ist eine praxisnahe Beispielanwendung für eine Single-Page-Webapplication (SPA) zur Aufgabenverwaltung. Diese Variante des Frontends läuft mit Blazor @(Util.BlazorType) auf @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription.  <span class="glyphicon glyphicon-arrow-right"></span> <a href="/About/AboutMiracleList">Andere Varianten</a>
+  </p>
+  <p>
+   Zur Benutzeranmeldung geben Sie die Kombination aus Ihrer E-Mail-Adresse und einem beliebigen Kennwort ein. Wenn es für diese E-Mail-Adresse noch kein Benutzerkonto gibt, wird automatisch ein neues Benutzerkonto mit einigen Beispielaufgaben angelegt. Merken Sie sich das Kennwort für zukünftige Anmeldungen. Das Kennwort kann nicht geändert werden. Das Benutzeranmeldeverfahren ist bewusst vereinfacht, um die Hürde zum Einstieg in die Anwendung gering zu halten.
+  </p>
   <br>
   @{
    /* DEMO: 40. Login-Formular */
