--- a/src/MLBlazorRCL/MainLayout.razor
+++ b/src/MLBlazorRCL/MainLayout.razor
@@ -23,8 +23,9 @@
   <AuthorizeView>
    <Authorized>
     <div class="HeadInfo">
-     <h4 class="HeadInfo" id="LoggedInUser">User: <b>@context.User.Identity.Name</b> <a href="/logout">Logout</a></h4>
-     <h4 class="HeadInfo">Logged in since: <b>@GetLogInDateTime().Result</b> Screen: <b><span id="screenInfo">@screenInfo</span></b> </h4>
+     <h4 class="HeadInfo" id="LoggedInUser">Benutzer: <b>@context.User.Identity.Name</b> <a href="/logout">Logout</a></h4>
+     <h4 class="HeadInfo">Angemeldet seit: <b>@GetLogInDateTime().Result</b> Screen: <b><span id="screenInfo">@screenInfo</span></b> </h4>
+     <h4 class="HeadInfo" id="LoggedInUser">Frontend: Blazor @(Util.BlazorType) auf @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</h4>
      <h4 class="HeadInfo"><ConnectionState /></h4>
     </div>
    </Authorized>
