--- a/src/MLBlazorRCL/TaskEdit.razor
+++ b/src/MLBlazorRCL/TaskEdit.razor
@@ -19,20 +19,20 @@
     <!--Schaltflächen-->
     <button id="save" type="button" title="Änderungen speichern"
            @onclick="Save" class="btn btn-success" disabled="@(!editContext.Validate())">
-     <span class="glyphicon glyphicon-floppy-save"></span> <span class="hidden-xs" i18n>Save</span>
+     <span class="glyphicon glyphicon-floppy-save"></span> <span class="hidden-xs" i18n>Speichern</span>
     </button>
-    <button id="cancel" type="button" title="Änderungen verwerfen" @onclick="Cancel" class="btn btn-warning"><span class="glyphicon glyphicon-remove"></span> <span class="hidden-xs" i18n>Cancel</span></button>
+    <button id="cancel" type="button" title="Änderungen verwerfen" @onclick="Cancel" class="btn btn-warning"><span class="glyphicon glyphicon-remove"></span> <span class="hidden-xs" i18n>Abbrechen</span></button>
     <!--Validierungsausgabe-->
     @if (!editContext.Validate()) {
      <div class="alert alert-danger" role="alert">
-      <h5 class="alert-heading text-danger">There are validation errors in this form:</h5>
+      <h5 class="alert-heading text-danger">Es gibt Eingabefehler:</h5>
       <ValidationSummary class="text-danger"></ValidationSummary>
      </div>
     }
 
     <!--Titel-->
     <div class='form-group has-feedback @(IsValid("Title")?"has-error":"")'>
-     <label for="tasktitle">Title</label>
+     <label for="tasktitle">Titel</label>
      <InputText id="tasktitle" @bind-Value="Task.Title" required class="form-control" />
      @if (IsValid("Title")) {
       <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
@@ -43,7 +43,7 @@
      <!--Wichtigkeit-->
      <div class="col-xs-3" style="padding-right: 2px">
       <div class="form-group">
-       <label for="taskimportance" i18n>Importance</label>
+       <label for="taskimportance" i18n>Wichtigkeit</label>
        <InputSelect id="taskimportance" name="taskimportance" @bind-Value="Task.ImportanceNN" class="form-control">
         @foreach (object s in System.Enum.GetValues(typeof(BO.Importance))) {
          <option value="@s">@s</option>
@@ -54,7 +54,7 @@
      <!--Aufwand-->
      <div class="col-xs-4" style="padding-left: 2px; padding-right: 2px">
       <div class='form-group @(IsValid("Effort")?"has-error":"")'>
-       <label for="taskeffort " i18n>Effort</label>
+       <label for="taskeffort " i18n>Aufwand</label>
        <InputNumber id="taskeffort" min="0" name="taskeffort" @bind-Value="Task.Effort" class="form-control" />
  
        <ValidationMessage class="text-danger" For="@(() => Task.Effort)" />
@@ -63,7 +63,7 @@
      <!--Fälligkeit-->
      <div class="col-xs-5" style="padding-left: 2px; ">
       <div class='form-group @(IsValid("Due")?"has-error":"")'>
-       <label for="taskDue" i18n>Due</label>
+       <label for="taskDue" i18n>Fälligkeit</label>
        <InputDate id="taskdue" name="taskdue" @bind-Value="Task.Due" class="form-control" />
    
        <ValidationMessage class="text-danger" For="@(() => Task.Due)" />
@@ -74,7 +74,7 @@
     <MLBlazorRCL.SubTaskList Task="Task"></MLBlazorRCL.SubTaskList>
     <!--Notiz-->
     <div class="form-group ">
-     <label for="tasknote" i18n>Note</label>
+     <label for="tasknote" i18n>Notizen</label>
      <InputTextArea id="tasknote" name="tasknote" rows="5" @bind-Value="Task.Note" class="form-control ">
      </InputTextArea>
     </div>
