--- a/src/MLBlazorRCL/Main.razor
+++ b/src/MLBlazorRCL/Main.razor
@@ -5,6 +5,7 @@
 @attribute [Authorize]
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
+@using ITVisions.TextGenerator;
 @using Microsoft.AspNetCore.SignalR.Client;
 @using Web;
 @using BlazorContextMenu;
@@ -90,9 +91,9 @@
   }
   else {
    @*Suchergebnisse anzeigen*@
-   <h4 style="margin-top:9px;margin-bottom:6px">@searchResultSet.Sum(x=>x.TaskSet.Count) Suchergebnisse in @searchResultSet.Count Kategorien</h4>
+   <h4 style="margin-top:9px;margin-bottom:6px">@TextGen.SingularPlural(searchResultSet.Sum(x=>x.TaskSet.Count), "Suchergebnis","Suchergebnisse") in @searchResultSet.Count Kategorien</h4>
    @foreach (BO.Category c in searchResultSet) {
-    <h5 class="blue">Category <b>@c.Name</b></h5>
+    <h5 class="blue">@TextGen.SingularPlural(@c.TaskSet.Count, "Aufgabe","Aufgaben") gefunden in Kategorie <b>@c.Name</b></h5>
     <div style="margin-bottom:5px;">
      @foreach (BO.Task t in c.TaskSet) {
       <TaskElement Task="t" @key="t"
