Verschönerung des File Upload

--- a/src/MiracleList_BS/Components/Files.razor
+++ b/src/MiracleList_BS/Components/Files.razor
@@ -40,8 +40,22 @@ else
 
 <EditForm Model="model" OnValidSubmit="OnSubmit">
  <label>Upload (max @GetMB(MAXFILESIZE) pro Datei)</label>
- <div class="custom-file">
-  <InputFile class="custom-file-input" OnChange="OnInputFileChange" multiple /><br />
+
+ <div class="form-group row">
+  <div class="col-md-12">
+   <div class="fileinput fileinput-new input-group " data-provides="fileinput">
+    <div class="form-control" data-trigger="fileinput">
+     <i class="glyphicon glyphicon-file fileinput-exists"></i>
+     <span class="fileinput-filename"></span>
+    </div>
+    <button class="input-group-addon btn btn-default btn-file">
+     <span class="fileinput-new">Wählen</span>
+     <span class="fileinput-exists">Ändern</span>
+     <InputFile class="custom-file-input btn btn-secondary" OnChange="OnInputFileChange" multiple />
+    </button>
+    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Entfernen</a>
+   </div>
+  </div>
  </div>
 
 
