--- a/src/MLBlazorRCL/wwwroot/styles.css
+++ b/src/MLBlazorRCL/wwwroot/styles.css
@@ -53,6 +53,137 @@ h4, h5 {
 }
 /*#endregion*/
 
+/*#region Input File. Quelle: https://stackoverflow.com/questions/51738012/how-to-set-file-input-in-custom-format-using-bootstrap-3-3-7-or-css */
+.input-group {
+ position: relative;
+ display: flex;
+ flex-wrap: wrap;
+ align-items: stretch;
+ width: 100%;
+}
+
+ .input-group > .form-control,
+ .input-group > .custom-select,
+ .input-group > .custom-file {
+  position: relative;
+  flex: 1 1 auto;
+  margin-bottom: 0;
+ }
+
+.btn-file {
+ position: relative;
+ overflow: hidden;
+ vertical-align: middle;
+}
+
+.fileinput.input-group {
+ display: flex;
+ margin-bottom: 9px;
+ flex-wrap: nowrap;
+}
+
+ .fileinput.input-group > * {
+  position: relative;
+  z-index: 2;
+ }
+
+.fileinput .form-control {
+ padding: .375rem .75rem;
+ display: inline-block;
+ margin-bottom: 0px;
+ vertical-align: middle;
+ cursor: text;
+}
+
+.fileinput-filename {
+ display: inline-block;
+ overflow: hidden;
+ vertical-align: middle;
+}
+
+.form-control .fileinput-filename {
+ vertical-align: bottom;
+}
+
+.input-group > .form-control:not(:last-child),
+.input-group > .custom-select:not(:last-child) {
+ border-top-right-radius: 0;
+ border-bottom-right-radius: 0;
+}
+
+.fileinput.input-group > .btn-file {
+ z-index: 1;
+}
+
+.fileinput-new {
+ padding-right: 0px;
+}
+
+ .fileinput-new.input-group .btn-file,
+ .fileinput-new .input-group .btn-file {
+  border-radius: 0 4px 4px 0;
+ }
+
+ .fileinput-new.input-group .btn-file,
+ .fileinput-new .input-group .btn-file {
+  border-radius: 0 .25rem .25rem 0;
+ }
+
+.input-group-addon:not(:first-child) {
+ border-left: 0;
+}
+
+.fileinput .input-group-addon {
+ padding: .375rem .75rem;
+ width: auto;
+}
+
+.fileinput-exists .fileinput-new,
+.fileinput-new .fileinput-exists {
+ display: none;
+}
+
+.fileinput .btn {
+ vertical-align: middle;
+}
+
+.fileinput .input-group-addon {
+ padding: .375rem .75rem;
+}
+
+.btn:not(:disabled):not(.disabled) {
+ cursor: pointer;
+}
+
+.fileinput.input-group > .btn-file {
+ z-index: 1;
+}
+
+.fileinput-new.input-group .btn-file,
+.fileinput-new .input-group .btn-file {
+ border-radius: 0 4px 4px 0;
+}
+
+.fileinput-new.input-group .btn-file,
+.fileinput-new .input-group .btn-file {
+ border-radius: 0 .25rem .25rem 0;
+}
+
+.btn-file > input {
+ position: absolute;
+ top: 0;
+ right: 0;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ font-size: 23px;
+ cursor: pointer;
+ filter: alpha(opacity=0);
+ opacity: 0;
+ direction: ltr;
+}
+/*#endregion*/
+
 /*#region Ladeanimation. Quelle: http://tobiasahlin.com/spinkit */
 
 .spinner {
