--- a/src/MiracleList_BW/Components/Files.razor
+++ b/src/MiracleList_BW/Components/Files.razor
@@ -17,7 +17,8 @@
   @foreach (var f in files.Values)
   {
    <li class="list-group-item">
-    <span class="glyphicon glyphicon-remove-circle close" aria-hidden="true" title="Datei löschen" @onclick="()=>DeleteFile(f)">  </span>
+    <span class="glyphicon glyphicon-remove-circle close" style="margin-left:10px" aria-hidden="true" title="Datei löschen" @onclick="()=>DeleteFile(f)">  </span>
+
     <span class="badge badge-primary badge-pill" title="@f.RelPath">
      @f.LastWriteTime.ToString("g", CultureInfo.CreateSpecificCulture("de-DE"))
     </span>
@@ -40,9 +41,25 @@ else
 
 <EditForm Model="model" OnValidSubmit="OnSubmit">
  <label>Upload (max @GetMB(MAXFILESIZE) pro Datei)</label>
- <div class="custom-file">
-  <InputFile class="custom-file-input" OnChange="OnInputFileChange" multiple /><br />
+
+
+ <div class="form-group row">
+  <div class="col-md-12">
+   <div class="fileinput fileinput-new input-group " data-provides="fileinput">
+    <div class="form-control" data-trigger="fileinput">
+     <i class="glyphicon glyphicon-file fileinput-exists"></i>
+     <span class="fileinput-filename"></span>
+    </div>
+    <button class="input-group-addon btn btn-default btn-file">
+     <span class="fileinput-new">Wählen</span>
+     <span class="fileinput-exists">Ändern</span>
+     <InputFile class="custom-file-input btn btn-secondary" OnChange="OnInputFileChange" multiple />
+    </button>
+    <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Entfernen</a>
+   </div>
+  </div>
  </div>
+
 
 
  @if (this.filesToUpload != null && this.filesToUpload.Count > 0)
@@ -52,7 +69,7 @@ else
    {
     var zugross = f.Size > MAXFILESIZE;
 
-    <li style='color:@(zugross ? "red" : "green")'>@f.Name: @(!zugross? GetMB(f.Size) : " ist zu groß! Maximium ist " + GetMB(MAXFILESIZE))! </li>
+    <li style='color:@(zugross ? "red" : "green")'>@f.Name: @(!zugross ? GetMB(f.Size) : " ist zu groß! Maximium ist " + GetMB(MAXFILESIZE))! </li>
    }
   </ul>
 
@@ -65,9 +82,11 @@ else
   var progressWidthStyle = progressPercent + "%";
 
   <div>@((MarkupString)Info)</div>
-  <div class="@progressCss">
-   <div class="progress-bar" role="progressbar" style="width: @progressWidthStyle" area-valuenow="@progressPercent" aria-minvalue="0" aria-maxvalue="100"></div>
-  </div>
+
+  @*  Bisher ohne Fortschrittsanzeige
+ <div class="@progressCss">
+ <div class="progress-bar" role="progressbar" style="width: @progressWidthStyle" area-valuenow="@progressPercent" aria-minvalue="0" aria-maxvalue="100"></div>
+ </div>*@
 
  }
 </EditForm>
