--- a/src/MiracleList_BW/App.razor
+++ b/src/MiracleList_BW/App.razor
@@ -65,9 +65,9 @@
  private async Task OnNavigateAsync(NavigationContext args)
  {
   Console.WriteLine("OnNavigateAsync: " + args.Path);
-  // Alle Pfade /samples liegen in MLBlazorRCL.dl
-  // Aber es gibt in /samples_BW und /samples_BS in den Hauptprojekten!
-  if (args.Path.ToLower().Contains("about") || (args.Path.ToLower().Contains("samples") ))
+  // Alle Pfade /Samples/ liegen in MLBlazorRCL.dl
+  // Aber es gibt in /Samples_BW und /Samples_BS in den Hauptprojekten!
+  if (args.Path.Contains("Samples/", System.StringComparison.CurrentCultureIgnoreCase) || args.Path.Contains("SamplesList", System.StringComparison.CurrentCultureIgnoreCase))
   {
    Console.WriteLine("Lazy Loading SamplesRCL.dll...");
    var a = await LazyAssemblyLoader.LoadAssembliesAsync(new string[] { "SamplesRCL.dll" });
