--- a/src/MLBlazorRCL/MainView/Main.razor
+++ b/src/MLBlazorRCL/MainView/Main.razor
@@ -2,12 +2,12 @@
 @page "/Index"
 @page "/app"
 @page "/task/{TaskID:int}"
+@using ITVisions.TextGenerator;
 @attribute [Authorize]
 @using ITVisions.Blazor
 @using ITVisions.Blazor.Controls
 @using ITVisions.TextGenerator;
 @using Microsoft.AspNetCore.SignalR.Client;
-@using Web;
 @using BlazorContextMenu;
 
 <div class="row">
