--- a/src/MiracleList_BM/Web/_Imports.razor
+++ b/src/MiracleList_BM/Web/_Imports.razor
@@ -28,6 +28,7 @@
 @using BM.Web.Pages
 @using MiracleList
 @using MLBlazorRCL
+@using MLBlazorRCL.Layout
 
 @*DI hier auch möglich global für alle Komponenten in diesem Projekt*@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
