--- a/src/MiracleList_BS/App.razor
+++ b/src/MiracleList_BS/App.razor
@@ -2,7 +2,7 @@
 
 <CascadingAuthenticationState>
  <Router AppAssembly="typeof(Startup).Assembly"
-         AdditionalAssemblies="new[] { typeof(Samples.RazorSyntax.Listen).Assembly,typeof(MLBlazorRCL.Main).Assembly }">
+         AdditionalAssemblies="new[] { typeof(Samples.RazorSyntax.Listen).Assembly,typeof(MLBlazorRCL.MainView.Main).Assembly }">
   <Navigating>
    <div>
     <p>Loading the requested page...</p>
@@ -10,7 +10,7 @@
   </Navigating>
   <Found Context="routeData">
    <AuthorizeRouteView RouteData="@routeData"
-                       DefaultLayout="@typeof(MLBlazorRCL.MainLayout)">
+                       DefaultLayout="@typeof(MLBlazorRCL.Layout.MainLayout)">
     <Authorizing>
      <div class="spinner">
       <div class="rect1"></div>
@@ -34,5 +34,3 @@
   </NotFound>
  </Router>
 </CascadingAuthenticationState>
-
-
