--- a/src/MiracleList_BW/_Imports.razor
+++ b/src/MiracleList_BW/_Imports.razor
@@ -29,6 +29,7 @@
 @using Web
 @using MiracleList
 @using MLBlazorRCL
+@using MLBlazorRCL.Layout
 
 @*DI hier auch möglich global für alle Komponenten in diesem Projekt*@
 @inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
